--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,15 @@
 <resources>
     <string name="app_name">Pokedex</string>
-    <string name="iv_pkmn_detail">pokemon</string>
-    <string name = "menu_about">About</string>
+    <string name="iv_pkmn_detail" translatable="false">pokemon</string>
+    <string name = "menu_about" translatable="false">About</string>
     <string name = "menu_search">Search</string>
     <string name = "menu_favor">Favorite</string>
     <string name = "menu_del_all">Free All</string>
     <string name = "menu_all_fav">Add All to Favorite</string>
     <string name = "mn_cont_favor">Add to Favorite</string>
     <string name = "mn_cont_del_favor">Delete from Favorites</string>
-    <string name = "menu_home">Home</string>
-    <string name="tv_general_info">Info</string>
+    <string name = "menu_home" translatable="false">Home</string>
+    <string name="tv_general_info" translatable="false">Info</string>
     <string name="tv_developers">Developers</string>
 
     <string name="types">Types:</string>
@@ -23,7 +23,7 @@
     <string name="special_attack">Spec. Attack</string>
     <string name="defense">Defense</string>
     <string name="attack">Attack</string>
-    <string name="health" translatable="false">HP</string>
+    <string name="health">HP</string>
     <string name="abilities">Abilities:</string>
     <string name="moves">Moves:</string>
 </resources>
