just few updates

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -21,4 +21,5 @@
     <string name="health">Salute</string>
     <string name="abilities">Abilità:</string>
     <string name="moves">Mosse:</string>
+    <string name="favorites_updated">PREFERITI AGGIORNATI</string>
 </resources>
